json dump output

--- a/crypto_news_notebook.ipynb
+++ b/crypto_news_notebook.ipynb
@@ -194,6 +194,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('articles.txt', 'w') as outfile:\n",
+    "    json.dump(gnews_data, outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -213,11 +223,14 @@
     "end_date=\"2021-01-16\"\n",
     "newsapi_data = []\n",
     "for symbols in top_20_crypto['Symbol name']:  \n",
-    "    top_headlines = newsapi.get_top_headlines(q=symbols,\n",
-    "                                          category='business',\n",
-    "                                          language='en',\n",
-    "                                          country='us')\n",
-    "    newsapi_data.append(top_headlines)"
+    "    # /v2/everything\n",
+    "    all_articles = newsapi.get_everything(q=symbols\n",
+    "                                      from_param=start_date,\n",
+    "                                      to=end_date,\n",
+    "                                      language='en',\n",
+    "                                      sort_by='relevancy')\n",
+    "\n",
+    "    newsapi_data.append(all_articles)"
    ]
   },
   {
