--- a/notebook_with_tradesignals.ipynb
+++ b/notebook_with_tradesignals.ipynb
@@ -443,7 +443,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "            totalArticles                                  title&description  \\\n",
+       "date                                                                           \n",
+       "2020-12-18             18  How to invest in bitcoin: The major ways to bu...   \n",
+       "2020-12-19              6  How will Bitcoin shift the power in the coffee...   \n",
+       "2020-12-20             14  Tesla's Elon Musk asks about converting \"large...   \n",
+       "2020-12-21             13  Ripple to face SEC suit over XRP cryptocurrenc...   \n",
+       "2020-12-22             10  SEC Sues Ripple Over XRP Cryptocurrency The ag...   \n",
+       "\n",
+       "            Sentiment Score     open     high      low    close        volume  \\\n",
+       "date                                                                            \n",
+       "2020-12-18                1  22811.8  23317.1  22308.2  23130.5   6050.937552   \n",
+       "2020-12-19                1  23132.8  24288.2  22800.0  23871.5   6255.127803   \n",
+       "2020-12-20                1  23871.5  24297.7  23084.9  23480.7   5876.100372   \n",
+       "2020-12-21                0  23480.8  24090.0  21885.6  22716.1  10783.182650   \n",
+       "2020-12-22                1  22724.6  23837.0  22354.2  23828.2   5728.007668   \n",
+       "\n",
+       "            daily_return  volume change  ...  vol_trend_short  \\\n",
+       "date                                     ...                    \n",
+       "2020-12-18      0.013331      -0.681420  ...              0.0   \n",
+       "2020-12-19      0.032036       0.033745  ...             -1.0   \n",
+       "2020-12-20     -0.016371      -0.060595  ...             -1.0   \n",
+       "2020-12-21     -0.032563       0.835092  ...              0.0   \n",
+       "2020-12-22      0.048956      -0.468802  ...             -1.0   \n",
+       "\n",
+       "            vol_trend_signal  bollinger_mid_band  bollinger_std  \\\n",
+       "date                                                              \n",
+       "2020-12-18               0.0                 NaN            NaN   \n",
+       "2020-12-19              -1.0                 NaN            NaN   \n",
+       "2020-12-20              -1.0                 NaN            NaN   \n",
+       "2020-12-21               1.0                 NaN            NaN   \n",
+       "2020-12-22              -1.0                 NaN            NaN   \n",
+       "\n",
+       "            bollinger_upper_band  bollinger_lower_band  bollinger_long  \\\n",
+       "date                                                                     \n",
+       "2020-12-18                   NaN                   NaN             0.0   \n",
+       "2020-12-19                   NaN                   NaN             0.0   \n",
+       "2020-12-20                   NaN                   NaN             0.0   \n",
+       "2020-12-21                   NaN                   NaN             0.0   \n",
+       "2020-12-22                   NaN                   NaN             0.0   \n",
+       "\n",
+       "            bollinger_short  bollinger_signal  Positive Return  \n",
+       "date                                                            \n",
+       "2020-12-18              0.0               0.0              1.0  \n",
+       "2020-12-19              0.0               0.0              1.0  \n",
+       "2020-12-20              0.0               0.0              0.0  \n",
+       "2020-12-21              0.0               0.0              0.0  \n",
+       "2020-12-22              0.0               0.0              1.0  \n",
+       "\n",
+       "[5 rows x 34 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>totalArticles</th>\n      <th>title&amp;description</th>\n      <th>Sentiment Score</th>\n      <th>open</th>\n      <th>high</th>\n      <th>low</th>\n      <th>close</th>\n      <th>volume</th>\n      <th>daily_return</th>\n      <th>volume change</th>\n      <th>...</th>\n      <th>vol_trend_short</th>\n      <th>vol_trend_signal</th>\n      <th>bollinger_mid_band</th>\n      <th>bollinger_std</th>\n      <th>bollinger_upper_band</th>\n      <th>bollinger_lower_band</th>\n      <th>bollinger_long</th>\n      <th>bollinger_short</th>\n      <th>bollinger_signal</th>\n      <th>Positive Return</th>\n    </tr>\n    <tr>\n      <th>date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2020-12-18</th>\n      <td>18</td>\n      <td>How to invest in bitcoin: The major ways to bu...</td>\n      <td>1</td>\n      <td>22811.8</td>\n      <td>23317.1</td>\n      <td>22308.2</td>\n      <td>23130.5</td>\n      <td>6050.937552</td>\n      <td>0.013331</td>\n      <td>-0.681420</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>2020-12-19</th>\n      <td>6</td>\n      <td>How will Bitcoin shift the power in the coffee...</td>\n      <td>1</td>\n      <td>23132.8</td>\n      <td>24288.2</td>\n      <td>22800.0</td>\n      <td>23871.5</td>\n      <td>6255.127803</td>\n      <td>0.032036</td>\n      <td>0.033745</td>\n      <td>...</td>\n      <td>-1.0</td>\n      <td>-1.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>2020-12-20</th>\n      <td>14</td>\n      <td>Tesla's Elon Musk asks about converting \"large...</td>\n      <td>1</td>\n      <td>23871.5</td>\n      <td>24297.7</td>\n      <td>23084.9</td>\n      <td>23480.7</td>\n      <td>5876.100372</td>\n      <td>-0.016371</td>\n      <td>-0.060595</td>\n      <td>...</td>\n      <td>-1.0</td>\n      <td>-1.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2020-12-21</th>\n      <td>13</td>\n      <td>Ripple to face SEC suit over XRP cryptocurrenc...</td>\n      <td>0</td>\n      <td>23480.8</td>\n      <td>24090.0</td>\n      <td>21885.6</td>\n      <td>22716.1</td>\n      <td>10783.182650</td>\n      <td>-0.032563</td>\n      <td>0.835092</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2020-12-22</th>\n      <td>10</td>\n      <td>SEC Sues Ripple Over XRP Cryptocurrency The ag...</td>\n      <td>1</td>\n      <td>22724.6</td>\n      <td>23837.0</td>\n      <td>22354.2</td>\n      <td>23828.2</td>\n      <td>5728.007668</td>\n      <td>0.048956</td>\n      <td>-0.468802</td>\n      <td>...</td>\n      <td>-1.0</td>\n      <td>-1.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 34 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 26
+    }
+   ],
+   "source": [
+    " # Construct the dependent variable where if daily return is greater than 0, then 1, else, 0.\n",
+    "btc_df['Positive Return'] = np.where(btc_df['daily_return'] > 0, 1.0, 0.0)\n",
+    "btc_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +526,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#  # Shift DataFrame values by 1\n",
+    "# trading_signals_df[x_var_list] = trading_signals_df[x_var_list].shift(1)\n",
+    "# trading_signals_df[x_var_list].tail()"
+   ]
   }
  ]
 }
